[metadata]
name = pynavmesh
version = 1.2.3
author = Shekn Itrch
author_email = cgproggame@gmail.com
description = Python implementation of path finding algorithm in navigation meshes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tugcga/Path-Finder
project_urls = 
	Bug Tracker = https://github.com/Tugcga/Path-Finder/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = 
	pathfinder
	pathfinder.navmesh
	pathfinder.navmesh_baker
	pathfinder.pyrvo
python_requires = >=3.6

[options.packages.find]
where = pathfinder

[egg_info]
tag_build = 
tag_date = 0

